<resources>
    <string name="app_name">English Bite</string>
    <string name="app_preview_name">Phrase preview</string>
    <string name="error_check_network_available">Please ensure that your mobile is connected to the network.</string>
    <string name="loading_data">Loading data...</string>
    <string name="initializing_data">Initializing app data, please wait...</string>
    <string name="network_not_available">Your network is not available !</string>
    <string name="service_not_available">Service address is not available !</string>
    <string name="fail_to_get_result">Failed to retrieve results. Please check your network connection.</string>
    <string name="app_crash_title">Sorry, the app has crashed.</string>
    <string name="app_issue_happen">Some issue happen!</string>
    <string name="app_exist_click_again">Click again to exit the app.</string>
    <string name="walkthrough_button_start">Next</string>
    <string name="walkthrough_content_first">Learn a useful English phrase</string>
    <string name="walkthrough_content_second">Practice new phrase in different activities</string>
    <string name="walkthrough_content_third">Connect and learn English with your friends and people from around the world</string>
    <string name="splash_loading">Loading...</string>
    <string name="login_main_appname">English Bite</string>
    <string name="login_name_zh_appname">一口英语</string>
    <string name="login_main_5_min_day">5 minutes of \nEnglish everyday!</string>
    <string name="login_main_sign_in">Sign in</string>
    <string name="login_main_not_registered_yet">Not yet registered?</string>
    <string name="login_main_already_have_an_account">Already have an acconunt?</string>
    <string name="login_main_sign_up">Sign up</string>
    <string name="login_main_login_in">Login in</string>
    <string name="login_ef_login">LOGIN</string>
    <string name="login_ef_forget_password">Forgot Password ?</string>
    <string name="login_ef_username_hint">Mobile Number</string>
    <string name="login_ef_password_hint">Password</string>
    <string name="login_ef_login_button">Login</string>
    <string name="loging">Logging in...</string>
    <string name="loging_getting_profile">Getting user profile...</string>
    <string name="loging_getting_checking_update">Checking resource for update...</string>
    <string name="loging_getting_downloading_resource">downloading resource</string>
    <string name="login_error_username_empty">Please type in mobile number</string>
    <string name="login_error_password_empty">Please type in password</string>
    <string name="login_get_progress">Synchronizing with the server, please wait...</string>
    <string name="register_ef_register_title">SIGN UP</string>
    <string name="register_ef_email_hint">Email</string>
    <string name="register_ef_password_hint">Password</string>
    <string name="register_ef_confirm_password_hint">Confirm Password</string>
    <string name="register_ef_sign_up_button">Sign up</string>
    <string name="register_ef_success">Register Success!</string>
    <string name="register_ef_registering">Registering</string>
    <string name="regisetr_ef_error_firstname_null">Your first name is required</string>
    <string name="register_ef_error_lastname_null">Your last name is required.</string>
    <string name="register_ef_error_username_null">You need to enter a name to log in.</string>
    <string name="regisetr_ef_error_username_invalid">invalid phone number</string>
    <string name="regisetr_ef_error_username_length">Phone number must be 10 digit long</string>
    <string name="register_ef_error_password_null">Please create a password.</string>
    <string name="register_ef_error_confirm_password_null">Please confirm your password.</string>
    <string name="register_ef_error_password_not_match">The passwords don\'t match</string>
    <string name="register_ef_first_name">First Name</string>
    <string name="register_ef_last_name">Last Name</string>
    <string name="register_ef_phone">Mobile Number</string>
    <string name="register_ef_enter_your_name">Enter your first name \n and last name so people can find you.</string>
    <string name="register_ef_choose_level">What level would you like to start?</string>
    <string name="register_ef_premium_info"><b>Premium English service</b> \n\n EF is the world leader in international education.
                    Give us your phone number and one of our study advisors will call you and tell you more.
    </string>
    <string name="register_ef_use_phone">To create an account or sign in, \n use your mobile number.</string>
    <string name="register_ef_next">Next</string>
    <string name="register_ef_back">Back</string>
    <string name="register_ef_accept_terms">I agree with the &lt;h>Terms and conditions&lt;/h></string>
    <string name="register_ef_accept_call">I agree to get phone call from EF</string>
    <string name="register_ef_not_accept_terms">Please accept the terms and conditions to continue</string>
    <string name="foget_pwd_ef_title">FORGOT PASSWORD?</string>
    <string name="foget_pwd_ef_email_hint">Email</string>
    <string name="foget_pwd_ef_submit_button">Submit</string>
    <string name="foget_pwd_ef_phone_hint">Mobile Number</string>
    <string name="foget_pwd_ef_verify_code_hint">Verification Code</string>
    <string name="foget_pwd_ef_reset_pwd_hint">New Password</string>
    <string name="foget_pwd_ef_confirm_pwd_hint">Confirm Password</string>
    <string name="foget_pwd_ef_Reset_button">Reset password</string>
    <string name="foget_pwd_ef_get_verifycode_btn">Get verification code</string>
    <string name="foget_pwd_ef_enter_phone_to_get_code">Enter your mobile number below and we’ll send you the verification code.</string>
    <string name="foget_pwd_ef_get_verify_code_success">A verification code is sent to you via SMS. Please check.</string>
    <string name="foget_pwd_ef_phone_null">Please enter your mobile number</string>
    <string name="foget_pwd_ef_verify_code_null">Please enter the verification code.</string>
    <string name="foget_pwd_ef_reset_pwd_null">Please create a new password.</string>
    <string name="foget_pwd_ef_confirm_pwd_null">Please confirm your password.</string>
    <string name="foget_pwd_ef_password_not_match">The passwords don\'t match.</string>
    <string name="foget_pwd_ef_progress_get_verify_code">Sending you the verification code...</string>
    <string name="foget_pwd_ef_progress_reset_password">Reset password...</string>
    <string name="foget_pwd_ef_progress_reset_pwd_success">Resetting the password was successful</string>
    <string name="change_pwd_ef_title">CHANGE PASSWORD</string>
    <string name="change_pwd_ef_old_pwd_hint">Old Password</string>
    <string name="change_pwd_ef_new_pwd_hint">New Password</string>
    <string name="change_pwd_ef_confirm_new_pwd_hint">Confirm Password</string>
    <string name="change_pwd_ef_change_button">Change password</string>
    <string name="change_pwd_ef_error_no_pwd">Please create a password.</string>
    <string name="change_pwd_ef_changing_pwd">Changing password...</string>
    <string name="change_pwd_ef_error_pwd_not_match">The passwords don\'t match.</string>
    <string name="change_pwd_ef_success">Changing password was successful.</string>
    <string name="rate_others">Rate others</string>
    <string name="home_screen_learn_title">Learn</string>
    <string name="home_screen_practice_title">Practice</string>
    <string name="home_screen_mastered_title">Mastered</string>
    <string name="home_screen_leaderboard_title">Leaderboard</string>
    <string name="home_screen_learn_available_now">available now</string>
    <string name="home_screen_learn_available_minutes">available %1$d minutes</string>
    <string name="home_screen_learn_available_hours">available in %1$d hours</string>
    <string name="home_screen_learn_available_tomorrow">available tomorrow</string>
    <string name="home_screen_practice_available_now">available to practice now</string>
    <string name="home_screen_practice_available_minutes">available to practice in %1$d minutes</string>
    <string name="home_screen_practice_available_hour">available to practice in %1$d hours</string>
    <string name="home_screen_practice_available_tomorrow">available to practice tomorrow</string>
    <string name="home_screen_everyday_learn_new">learn a new phrase \nevery day</string>
    <string name="home_screen_practice_3_times_to_master">Practice 3 times to master each phrase</string>
    <string name="home_screen_friends">Friends</string>
    <string name="home_screen_invite">Invite</string>
    <string name="home_screen_no_new_chunks">No new phrase available!</string>
    <string name="home_screen_no_rehearse_chunks">No available phrases to practice!</string>
    <string name="home_screen_no_marstered_chunks">No mastered phrases!</string>
    <string name="home_screen_all_done_good_job">Good job!</string>
    <string name="home_screen_all_done_stay_tuned">you have learned all the phrases available in this version, stayed tuned!</string>
    <string name="home_screen_done_for_today_stay_tuned">You have learned all available phrases for today, stay tuned</string>
    <string name="home_screen_all_done_avaiable_soon">available soon</string>
    <string name="chunk_learn_lets_learn_new_chunk">Let\'s learn\n a new phrase!</string>
    <string name="chunk_practice_choose_appropriate_answer">Choose an appropriate answer</string>
    <string name="chunk_learn_detail_translation">中</string>
    <string name="chunk_learn_detail_status_title">mastery level</string>
    <string name="chunk_learn_detail_status_descript">available to practice in %1$d day</string>
    <string name="chunk_learn_detail_status_descripts">available to practice in %1$d days</string>
    <string name="chunk_learn_detail_status_mastered">phrase has been mastered</string>
    <string name="chunk_list_actionbar_title">PHRASES</string>
    <string name="chunk_list_to_rehearse">To practice</string>
    <string name="chunk_list_mastered">Mastered</string>
    <string name="chunk_list_rehearse_available_text"> are available to practice.</string>
    <string name="chunk_list_rehearse_future_text"> more to practice in the future.</string>
    <string name="chunk_list_master_no_phrase">Successfully practice a phrase three times to master it</string>
    <string name="chunk_search_to_rehearse">to practice</string>
    <string name="chunk_search_mastered">mastered</string>
    <string name="chunk_search_button_done">Done</string>
    <string name="chunk_search_button_cancel">Cancel</string>
    <string name="balloon_description">Description</string>
    <string name="balloon_tips">To be easy to understand or logical.</string>
    <string name="balloon_drag_info">Drag the balloon below the line in the correct order!</string>
    <string name="balloon_good_job">Good Job!</string>
    <string name="balloon_drag_start">Start</string>
    <string name="settings_avatar_edit_title">Change profile picture</string>
    <string name="settings_avatar_edit_cancel">Cancel</string>
    <string name="settings_avatar_take_from_gallery">Add from gallery</string>
    <string name="settings_avatar_take_from_camera">Add from camera</string>
    <string name="popup_practice_quit_title">Quit Practicing?</string>
    <string name="popup_practice_quit_info">If you quit now, your progress in this practice sesion will not be saved. Are you sure you want to quit?</string>
    <string name="popup_practice_quit_no">NO</string>
    <string name="popup_practice_quit_quit">Quit</string>
    <string name="report_text">Are you sure you want to report this recording</string>
    <string name="report_button">Report the recording</string>
    <string name="popup_rating_activity_sorry">Sorry!</string>
    <string name="rating_view_no_more">No more user content is available for the moment,please come back later.</string>
</resources>