<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <View 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:background="@color/bella_color_black_dark"
    	android:alpha="0.5"
        />
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:layout_alignParentBottom="true"
	    android:orientation="vertical">
	    <LinearLayout 
	        android:id="@+id/popup_avatar_editor_items"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="vertical"
	        android:background="@drawable/ios_like_dialog_item_bg">
	        <TextView 
	            android:id="@+id/popup_avatar_editor_title"
	            android:layout_width="match_parent"
	            android:layout_height="@dimen/setting_avatar_dialog_item_height"
	            android:text="@string/settings_avatar_edit_title"
	            android:textColor="@color/bella_color_black_dark"
	            android:alpha="0.7"
	            android:gravity="center"/>
	        <View 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:alpha="0.5"
	            android:background="@color/bella_color_black_dark"/>
	         <TextView 
	            android:id="@+id/popup_avatar_editor_gallary"
	            android:layout_width="match_parent"
	            android:layout_height="@dimen/setting_avatar_dialog_item_height"
	            android:text="@string/settings_avatar_take_from_camera"
	            android:textColor="@color/ios_like_dialog_item_text"
	            android:textSize="18sp"
	            android:gravity="center"/>
	        <View 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:alpha="0.5"
	            android:background="@color/bella_color_black_dark"/>
	        <TextView 
	            android:id="@+id/popup_avatar_editor_camera"
	            android:layout_width="match_parent"
	            android:layout_height="@dimen/setting_avatar_dialog_item_height"
	            android:text="@string/settings_avatar_take_from_gallery"
	            android:textSize="18sp"
	            android:textColor="@color/ios_like_dialog_item_text"
	            android:gravity="center"/>
	       
	    </LinearLayout>
	    <TextView 
	        android:id="@+id/popup_avatar_editor_cancel"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/setting_avatar_dialog_item_height"
	        android:layout_marginTop="10dp"
	        android:text="@string/settings_avatar_edit_cancel"
	        android:gravity="center"
	        android:textColor="@color/ios_like_dialog_item_text"
	        android:textSize="18sp"
	        android:background="@drawable/ios_like_dialog_item_bg"/>
	</LinearLayout>
</RelativeLayout>
